Apply Nullability to `spring-integration-kafka`
related to #10083

Signed-off-by: Jiandong Ma <jiandong.ma.cn@gmail.com>